# okapi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
assets/: logo.afdesign
scripts/: gen_fake_files.py  replace_star.cast
src/: editor.rs  file_alias.rs  file_loader.rs  main.rs  search.rs
