[package]
name = "okapi"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Find many lines by regex and edit them all at once."
repository = "https://github.com/nk9/okapi"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
camino = "1.2.1"
camino-tempfile = "1.4.1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.28"
regex = "1.12.2"
range-parser = "0.1.2"
