[package]
name = "okapi-ed"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Find lines across files by regex and edit them all at once with your $EDITOR"
repository = "https://github.com/nk9/okapi"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["batch", "edit", "lines", "regex"]

[[bin]]
name = "okapi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
camino = "1.2.1"
camino-tempfile = "1.4.1"
clap = { version = "4", features = ["derive", "wrap_help"] }
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.28"
regex = "1.12.2"
range-parser = "0.1.2"
rayon = "1.11.0"
similar = "2.7.0"
crossterm = "0.29.0"
